# vidly-api-django

./: .azure-env  .gitignore  Pipfile  Pipfile.txt  Pocfile  Procfile  README.md  build.sh  data.sql  db.sqlite3  env_example  info.txt  manage.py  pg_hba.conf  pyproject.toml  pytest.ini  render.yaml  requirement.txt  requirements  requirements.txt  requiremnts.txt
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_user_email.py
liked/: admin.py  apps.py  models.py
liked/migrations/: 0001_initial.py
locustfiles/: browse_movies.py
management/commands/: createsuperuser.py
management/scripts/: mysqlconnector.py  read_querys.py  write_querys.py
movie/: admin.py  apps.py  filter.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
movie/management/: seed.sql
movie/migrations/: 0001_initial.py  0002_alter_genre_options_alter_movie_options_and_more.py  0003_alter_movie_genre.py  0004_alter_genre__id_alter_movie__id.py  0004_remove_genre_id_genre__id.py  0005_movieposter.py  0005_remove_movie_id_movie__id.py  0006_alter_movieposter_movie.py  0007_rename_dailyrentalrate_movie_imdbrating.py  0008_remove_movie_numberinstock.py  0009_movie_description.py  0010_movie_releasedate.py  0011_customer.py  0012_promotions.py  0013_alter_promotions_movie.py  0014_rename_promotions_promotion.py  0015_delete_promotion.py  (+29 more)
movies/: models.py
playground/: urls.py  views.py
static/: staticfiles.json
vidly_api/: asgi.py  azure.py  celery.py  prod.py  settings.py  urls.py  wsgi.py
(+17 files in other folders)
