[tool.poetry]
name = "vidly-api-django"
version = "0.1.0"
description = ""
authors = ["HelloSolo <davidalimi148@gmail.com>"]
readme = "README.md"
packages = [{include = "vidly_api_django"}]

[tool.poetry.dependencies]
python = "^3.9"
amqp = "5.1.1"
asgiref = "3.6.0"
attrs = "22.2.0"
billiard = "3.6.4.0"
black = "22.12.0"
brotli = "1.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
